# mobility-datasets

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  pytest.ini  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/api/: index.doctree
.doctrees/cli/: index.doctree
.doctrees/guides/: index.doctree  kitti_dataset.doctree
.doctrees/quickstart/: index.doctree
.github/workflows/: ci.yml  docs.yml  publish.yml  tests.yml
_sources/: index.rst.txt
_sources/api/: index.rst.txt
_sources/guides/: kitti_dataset.rst.txt
api/: index.html
cli/: index.html
docs/: api.rst  cli.rst  conf.py  datasets.rst  index.rst  installation.rst  quickstart.rst
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/cli/: index.rst
docs/source/guides/: index.rst  kitti_dataset.rst
docs/source/quickstart/: google_cloud.rst  index.rst
guides/: index.html  kitti_dataset.html
quickstart/: index.html
src/mobility_datasets/: __init__.py
src/mobility_datasets/cli/: __init__.py  main.py
src/mobility_datasets/common/: __init__.py  base.py  coordinates.py
src/mobility_datasets/config/: __init__.py  kitti.yaml  nuimages.yaml  nuplan.yaml  nureality.yaml  nuscenes.yaml  provider.py  waymo.yaml
src/mobility_datasets/core/: downloader.py
src/mobility_datasets/kitti/: __init__.py  dataset.py  loader.py
src/mobility_datasets/nuscenes/: __init__.py  dataset.py  loader.py
src/mobility_datasets/scripts/: __init__.py  bucket_explorer.py  download_and_verify.py  gernerate_kitti_config.py  test_gcs.py
src/mobility_datasets/waymo/: __init__.py  dataset.py
tests/: __init__.py  base_downloader_test.py  conftest.py  test_cli.py  test_common.py  test_datasets.py
tests/cli/: test_cli.py
tests/config/: test_provider.py
tests/integration/cli/: test_cli_integration.py
tests/integration/config/: conftest.py  test_config_provider.py
tests/integration/config/data/configs/: kitti.yaml  nuscenes.yaml
tests/kitti/: test_loader.py
tests/nuscenes/: test_loader.py
tests/unit/cli/: test_main.py
tests/unit/config/: conftest.py  test_provider.py
tests/unit/core/: README.md  conftest.py  test_downloader.py
